--- a/TruthWeaver.html
+++ b/TruthWeaver.html
@@ -96,7 +96,7 @@
 
     <script>
         // --- Firebase/Gemini API Setup (Mandatory Globals) ---
-        const apiKey = "AIzaSyBq3mRz46QKDFXpShE3sIqzyYnEacQu-yU"; 
+        const apiKey = "your api key"; 
         const API_URL = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-05-20:generateContent?key=${apiKey}`;
 
         // Chat state: Stores the conversation history for context
@@ -278,3 +278,4 @@
     </script>
 </body>
 </html>
+
